objects/Printer_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>printer_settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>organizer_id__c</fullName>
        <label>organizer id</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>printer_settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>printset_name__c</fullName>
        <label>printset name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>BLN Printer Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Printer Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Printer Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>